log
Thu 09 Mar 2023 04:09:19 PM UTC: 
 tests:  0|7
total_score: 0/70
97a1439
Thu 09 Mar 2023 04:16:37 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
fefbaf7
Sun 12 Mar 2023 12:56:37 AM UTC: 
 exercises.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:43:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   43 |   return 0;
      |          ^
exercises.c:28:6: note: declared here
   28 | void arrayMaxMin(int *a, int n, int *max, int *min) {
      |      ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
63efce5
Sun 12 Mar 2023 12:57:05 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 20/70
37d1d15
Sun 12 Mar 2023 01:22:56 AM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
ecc30cf
